# garnix-insights

./: .garnix.yaml  .gitignore  AI-INSTRUCTIONS.md  CHANGELOG.md  CLEAN_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GITHUB-SECRETS.md  GUIDE.md  LICENSE-APACHE  MCP-CONFIGURATION.md  MCP-USAGE.md  NEXT-STEPS.md  PROJECT-RATIONALE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_TEST.md  SECURITY.md  clean_commit_message.py  deny.toml  flake.nix  mcp-config-example.json  release-please-config.json  renovate.json  result  test-commits.sh  test_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: pages.yml  publish.yml  release-please.yml
coverage/: cobertura.xml
docs/: _config.yml  ai-agent-instructions.md  index.md  mcp-usage.md
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  mcp.rs  server.rs  types.rs
