[package]
name = "garnix-fetcher"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4"